--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,37 @@
 {
-	"app.edition": "Edition",
+	"app.allignment": "Allignment",
+	"app.challengeDecks": "Challenge Decks",
 	"app.endJourney": "end Journey",
 	"app.language": "Language",
+	"app.selectItem.Balrog": "Balrog",
+	"app.selectItem.Challenge_Deck_A": "A | Stewards of Gondor",
+	"app.selectItem.Challenge_Deck_B": "B | Release of Prisoners",
+	"app.selectItem.Challenge_Deck_C": "C | Dwarven Quest",
+	"app.selectItem.Challenge_Deck_D": "D | Bargain Between Friends",
+	"app.selectItem.Challenge_Deck_E": "E | Return of the King",
+	"app.selectItem.Challenge_Deck_F": "F | Spies and Traitors",
+	"app.selectItem.Challenge_Deck_G": "G | Marauding Brood of Uglies ",
+	"app.selectItem.Challenge_Deck_H": "H | Stealthy Tribe",
+	"app.selectItem.Challenge_Deck_I": "I | Morgul Rallying Cry",
+	"app.selectItem.Challenge_Deck_J": "J | Seducing Nations of Men",
+	"app.selectItem.Challenge_Deck_K": "K | Lord of Rings",
+	"app.selectItem.Challenge_Deck_L": "L | Wolves",
+	"app.selectItem.Challenge_Deck_M": "M | It's Magic",
+	"app.selectItem.Challenge_Deck_N": "N | Smoke on the Water",
+	"app.selectItem.Challenge_Deck_O": "O | Men of Skill",
+	"app.selectItem.Challenge_Deck_P": "P | Join the Hunt",
+	"app.selectItem.Challenge_Deck_Q": "Q | Prophet of Doom",
+	"app.selectItem.Challenge_Deck_R": "R | The Ally-Armada",
+	"app.selectItem.Challenge_Deck_S": "S | Await the Onset",
+	"app.selectItem.Challenge_Deck_T": "T | Feel Free",
+	"app.selectItem.Challenge_Deck_U": "U | Come by Night upon them",
+	"app.selectItem.Challenge_Deck_V": "V | Great Shadow",
+	"app.selectItem.Fallen-wizard_bright": "Fallen Wizard (cover)",
+	"app.selectItem.Fallen-wizard_dark": "Fallen Wizard (open)",
+	"app.selectItem.Hero": "Hero",
+	"app.selectItem.Minion": "Minion",
+	"app.selectItem.de": "German",
+	"app.selectItem.en": "English",
 	"app.sitesAsList": "Sites as List",
 	"app.startJourney": "start Journey"
 }
