--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,8 @@
 	"app.challengeDecks": "Challenge Decks",
 	"app.endJourney": "end Journey",
 	"app.language": "Language",
+	"app.player_1": "Player <b>1</b>",
+	"app.player_2": "Player <b>2</b>",
 	"app.selectItem.Balrog": "Balrog",
 	"app.selectItem.Challenge_Deck_A": "A | Stewards of Gondor",
 	"app.selectItem.Challenge_Deck_B": "B | Release of Prisoners",
