--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,8 +3,8 @@
 	"app.challengeDecks": "Challenge Decks",
 	"app.endJourney": "Reise beenden",
 	"app.language": "Sprache",
-	"app.player_1": "Spieler <b>1</b>",
-	"app.player_2": "Spieler <b>2</b>",
+	"app.player_1": "<span>Spieler </span><b>1</b>",
+	"app.player_2": "<span>Spieler </span><b>2</b>",
 	"app.selectItem.Balrog": "Balrog",
 	"app.selectItem.Challenge_Deck_A": "A | Stewards of Gondor",
 	"app.selectItem.Challenge_Deck_B": "B | Release of Prisoners",
