--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -6,6 +6,7 @@
 	"app.extraMovement": "Reichweite",
 	"app.language": "Sprache",
 	"app.player_1": "<span>Spieler </span><b>1</b>",
+	"app.player_2": "<span>Spieler </span><b>2</b>",
 	"app.selectItem.Balrog": "Balrog",
 	"app.selectItem.Challenge_Deck_A": "A | Stewards of Gondor",
 	"app.selectItem.Challenge_Deck_B": "B | Release of Prisoners",
